[tool.poetry]
name = "b-roller"
version = "1.6.2"
description = "Download resources from several sources across the web"
readme = "readme.md"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"
packages = [
    { include = "b_roller" },
    { include = "pytube", from = "pytube" },
]

[tool.poetry.scripts]
broll = 'b_roller.__main__:app'

[tool.poetry.dependencies]
python = "^3.8"
typer = "*"
python-slugify = "*"
requests = "*"
ffmpeg-python = "^0.2.0"
urllib3 = "<=2"
rich = "^13.5.2"
pillow = "^10.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "*"
flake8 = "^5.0.4"
isort = "^5.9.2"
pyproject-flake8 = "^5.0.4.post1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv          # root of the project
    | pytube          # not my project
  )/
)
'''

[tool.flake8]
max-line-length = 120
per-file-ignores = [
]
exclude = [
    ".venv",
    "pytube",
]

[tool.isort]
skip_glob = [
    ".venv",
    "pytube",
]

# Structure
default_section = "THIRDPARTY"
known_first_party = "editingpal"

# Import Style
line_length = 120
force_grid_wrap = false
use_parentheses = true
include_trailing_comma = true
combine_as_imports = true
multi_line_output = 3
